@@ -209,7 +209,7 @@ public class MenuFragment extends Fragment{
                     new Buttoni("@client.changelog", Icon.edit, () -> Client.mapping.showChangelogDialog()),
                     new Buttoni("@client.features", Icon.list, () -> Client.mapping.showFeaturesDialog()),
                     new Buttoni("@client.makekey", Icon.lock, () -> Client.mapping.generateKey()),
-                    new Buttoni("@client.keyshare", Icon.bookOpen, () -> Client.mapping.shareKey())
+                    new Buttoni("@client.keyshare", Icon.lock, () -> Client.mapping.shareKey())
                 ), // End of client section
                 new Buttoni("@quit", Icon.exit, Core.app::exit)
             );
